title is now changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
-    <title>Freebie 40 - Resume (Tailwind CSS) by pixelcave</title>
+    <title>Atul Kumar Singh Resume</title>
 
     <meta name="description" content="Freebie 40 - Resume (Tailwind CSS). Check out more at https://pixelcave.com" />
     <meta name="author" content="pixelcave" />
